src/test/ui/imports/extern-crate-used.stderr
error: unused extern crate
  --> $DIR/extern-crate-used.rs:18:1
   |
LL | extern crate core;
   | ^^^^^^^^^^^^^^^^^^ help: remove it
   |
note: lint level defined here
  --> $DIR/extern-crate-used.rs:6:9
   |
LL | #![deny(unused_extern_crates)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

